--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "devDependencies": {
     "eslint": "^3.16.1",
     "eslint-plugin-react": "^6.10.0"
+  },
+  "scripts":{
+    "start": "node ./server/server.js"
   }
 }
