--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "affiniate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "postinstall": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -16,6 +18,11 @@
   "author": "Aliff Macapinlac",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "webpack": "^1.12.9",
     "body-parser": "^1.16.1",
     "browserify": "^14.1.0",
     "es6-promise": "^4.0.5",
@@ -34,7 +41,5 @@
     "eslint": "^3.16.1",
     "eslint-plugin-react": "^6.10.0"
   },
-  "scripts":{
-    "start": "node server.js"
-  }
+
 }
