--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server/server.js",
-    "postinstall": "webpack -p"
+    "postinstall": "gulp default"
+    
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,6 @@
   "author": "Aliff Macapinlac",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9",
     "body-parser": "^1.16.1",
     "browserify": "^14.1.0",
     "es6-promise": "^4.0.5",
@@ -41,5 +37,4 @@
     "eslint": "^3.16.1",
     "eslint-plugin-react": "^6.10.0"
   }
-
 }
