--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/server.js",
-    "postinstall": "gulp default"
-    
+    "prestart": "gulp default",
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
