--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "gulp default",
-    "start": "node ./server/server.js"
+    "build":"gulp",
+    "start": "node ./server/server.js",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
