--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"gulp",
+    "test": "mocha test",
+    "prestart": "mongod",
     "start": "node ./server/server.js"
   },
   "repository": {
@@ -30,7 +31,8 @@
     "react-dom": "^15.4.2",
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "mongodb": "~3.0.0"
   },
   "devDependencies": {
     "eslint": "^3.16.1",
