--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test": "mocha test",
-    "prestart": "mongod",
-    "start": "node ./server/server.js"
+    "prestart": "bundle",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
