--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test": "mocha test",
     "prestart": "bundle",
     "start": "node server/server.js"
   },
@@ -32,7 +31,7 @@
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
-    "mongodb": "~3.0.0"
+    "mongodb": "*"
   },
   "devDependencies": {
     "eslint": "^3.16.1",
