--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/server.js"
+    "start": "cross-env NODE_ENV=production MONGO_URL=mongodb://<dbuser>:<dbpassword>@ds113000.mlab.com:13000/heroku_59frhz9d node ./server/server.js"
   },
   "repository": {
     "type": "git",
