--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "gulp",
     "start": "node ./server/server.js",
-    "poststart": "gulp"
+
   },
   "repository": {
     "type": "git",
